# tbbot

./: CMakeLists.txt  README.md  main.cpp
CursedWordsTGBot/: CMakeLists.txt  main.cpp
Modules/: CMakeLists.txt  queue.hpp
Modules/Queue/: CMakeLists.txt  queue.hpp
Modules/Task/: CMakeLists.txt  task.cpp  task.h
Tests/: CMakeLists.txt
Tests/UnitTests/: CMakeLists.txt  test.cpp
Tests/UnitTests/Queue_Tests/: CMakeLists.txt  main.cpp  test.cpp  test.h
